# pente_cpp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: main.cpp  penteboard.cpp  penteboard.h
tests/: penteboard_tests.cpp
